# tju_autocourse

./: .gitignore  README.md  README_zh.md  config.template.yaml  main.py  pyproject.toml
scripts/: check_course.py  course_fetch.py  course_info.py  course_statu.py  course_status.py  example.py  init.py
src/tju_autocourse/: Config.py  User.py  __init__.py  api.py  config.py  parsers.py  user.py  user_models.py
tests/: test_Config.py  test_User.py  test_user.py
