[project]
name = "tju-autocourses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["aiohttp>=3.12.15", "requests>=2.32.5"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/tju_autocourse"]
[dependency-groups]
dev = ["coverage>=7.10.6"]
